feat: add favicon to all pages

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked Games 6X - Contact Us</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Contact Unblocked Games 6X for support, feedback, or game suggestions.">
     <meta name="keywords" content="unblocked games 6x, contact, support, feedback, games">
     <style>
