--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked Games 6X - Privacy Policy</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Read the Privacy Policy for Unblocked Games 6X. We are committed to protecting your privacy and do not collect personal information.">
     <meta name="keywords" content="unblocked games 6x, privacy policy, privacy, security">
     <style>
