--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked Games 6X - Terms of Use</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Read the Terms of Use for Unblocked Games 6X. By using our website, you agree to these terms.">
     <meta name="keywords" content="unblocked games 6x, terms of use, terms, legal">
     <style>
