--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked Games 6X - About Us</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Learn about Unblocked Games 6X, the premier destination for free, accessible HTML5 gaming.">
     <meta name="keywords" content="unblocked games 6x, about us, free games, school games, html5 games">
     <style>
