--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked Games 6X - Blog</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Play the best Unblocked Games 6X online for free at school or work. Enjoy hundreds of HTML5 games with no downloads required. Fast, safe, and always accessible.">
     <meta name="keywords" content="unblocked games 6x, free games, school games, html5 games, online games, browser games">
     <style>
