feat: add Google Analytics tracking code

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,15 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Play the best Unblocked Games 6X online for free at school or work. Enjoy hundreds of HTML5 games with no downloads required. Fast, safe, and always accessible.">
     <meta name="keywords" content="unblocked games 6x, free games, school games, html5 games, online games, browser games">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFKNHJNC00"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BFKNHJNC00');
+    </script>
     <style>
         * {
             margin: 0;
