--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,15 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Read the Privacy Policy for Unblocked Games 6X. We are committed to protecting your privacy and do not collect personal information.">
     <meta name="keywords" content="unblocked games 6x, privacy policy, privacy, security">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFKNHJNC00"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BFKNHJNC00');
+    </script>
     <style>
         * {
             margin: 0;
