--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,15 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Read the Terms of Use for Unblocked Games 6X. By using our website, you agree to these terms.">
     <meta name="keywords" content="unblocked games 6x, terms of use, terms, legal">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFKNHJNC00"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BFKNHJNC00');
+    </script>
     <style>
         * {
             margin: 0;
