--- a/about.html
+++ b/about.html
@@ -7,6 +7,15 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Learn about Unblocked Games 6X, the premier destination for free, accessible HTML5 gaming.">
     <meta name="keywords" content="unblocked games 6x, about us, free games, school games, html5 games">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFKNHJNC00"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BFKNHJNC00');
+    </script>
     <style>
         * {
             margin: 0;
