--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta name="description" content="Contact Unblocked Games 6X for support, feedback, or game suggestions.">
     <meta name="keywords" content="unblocked games 6x, contact, support, feedback, games">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BFKNHJNC00"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-BFKNHJNC00');
+    </script>
     <style>
         * {
             margin: 0;
