--- a/privacy.html
+++ b/privacy.html
@@ -16,6 +16,8 @@
     
       gtag('config', 'G-BFKNHJNC00');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7892203965442076"
+     crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
